// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db add member tests Member Role Tests Adds a member role to the database and then deletes it 1`] = `
{
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "description": "My Desc",
  "isPublic": true,
  "name": {
    "en": "en name",
    "fi": "fi name",
    "sv": "sv name",
  },
  "permissions": [
    "aircraft.admin",
    "booking.admin",
  ],
  "roleId": "TEST_ROLE",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db add member tests add member and update member 1`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": null,
  "canMakeReservations": false,
  "createdAt": Any<String>,
  "createdBy": 0,
  "dateOfBirth": null,
  "email": "test@testdata.com",
  "emailVerifiedAt": undefined,
  "firstName": "test",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": false,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "member",
  "licenceExpiry": null,
  "licenceId": undefined,
  "medicalExpiry": null,
  "memberId": 0,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": undefined,
  "membershipApprovedBy": undefined,
  "phoneNumber": null,
  "postcode": null,
  "roles": [],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": 0,
}
`;

exports[`Db add member tests add member and update member 2`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": null,
  "canMakeReservations": false,
  "createdAt": Any<String>,
  "createdBy": 0,
  "dateOfBirth": null,
  "email": "test@testdata.com",
  "emailVerifiedAt": undefined,
  "firstName": "test2",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": false,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "member",
  "licenceExpiry": null,
  "licenceId": undefined,
  "medicalExpiry": null,
  "memberId": 0,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": undefined,
  "membershipApprovedBy": undefined,
  "phoneNumber": null,
  "postcode": null,
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
        "sv": "Medlem",
      },
      "permissions": [
        "member",
        "document.user",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": 0,
}
`;

exports[`Db query member tests getMemberByEmail should return member data for a valid email address 1`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": "BILL005",
  "canMakeReservations": false,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": Any<String>,
  "email": "pekka.hamalainen@example.com",
  "emailVerifiedAt": undefined,
  "firstName": "Pekka",
  "iceContactName": "Kaisa Hämäläinen",
  "iceContactPhoneNumber": "0441098765",
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": true,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "Hämäläinen",
  "licenceExpiry": "2026-03-20",
  "licenceId": "FI.FCL.123456",
  "medicalExpiry": "2026-06-01",
  "memberId": "Pekka1",
  "memberSince": Any<String>,
  "memberType": "JUNIOR",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "phoneNumber": "0445678901",
  "postcode": "20100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
        "sv": "Administratör",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
        "access_codes.admin",
        "invoicing.admin",
        "document.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
        "sv": "Medlem",
      },
      "permissions": [
        "member",
        "document.user",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Lönnrotinkatu 20",
  "townCity": "Turku",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db query member tests getMemberByEmail should return member data regardless of the case 1`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": "BILL005",
  "canMakeReservations": false,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": Any<String>,
  "email": "pekka.hamalainen@example.com",
  "emailVerifiedAt": undefined,
  "firstName": "Pekka",
  "iceContactName": "Kaisa Hämäläinen",
  "iceContactPhoneNumber": "0441098765",
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": true,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "Hämäläinen",
  "licenceExpiry": "2026-03-20",
  "licenceId": "FI.FCL.123456",
  "medicalExpiry": "2026-06-01",
  "memberId": "Pekka1",
  "memberSince": Any<String>,
  "memberType": "JUNIOR",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "phoneNumber": "0445678901",
  "postcode": "20100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
        "sv": "Administratör",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
        "access_codes.admin",
        "invoicing.admin",
        "document.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
        "sv": "Medlem",
      },
      "permissions": [
        "member",
        "document.user",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Lönnrotinkatu 20",
  "townCity": "Turku",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db query member tests getMemberById should return member data for a valid id 1`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": "1980-01-15",
  "email": "chris.whellams@gmail.com",
  "emailVerifiedAt": undefined,
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": true,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": true,
  "lang": "fi",
  "lastName": "Virtanen",
  "licenceExpiry": "2026-03-20",
  "licenceId": "FI.FCL.123456",
  "medicalExpiry": "2026-06-01",
  "memberId": "Matti1",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with additional flying rights",
      "isPublic": false,
      "name": {
        "en": "Flying Member",
        "fi": "Lento-oikeus",
        "sv": "Flygmedlem",
      },
      "permissions": [
        "flightlog.user",
        "booking.user",
        "aircraft.user",
        "access_codes.user",
        "document.user",
      ],
      "roleId": "FLYING_MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
        "sv": "Instruktör",
      },
      "permissions": [],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
        "sv": "Medlem",
      },
      "permissions": [
        "member",
        "document.user",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Safety Manager takes care of processing anonymized occurrences",
      "isPublic": false,
      "name": {
        "en": "Safety Manager",
        "fi": "Turvallisuusvastaava",
        "sv": "Säkerhetsansvarig",
      },
      "permissions": [
        "sms.manager",
      ],
      "roleId": "SMS_MANAGER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`Db query member tests getMemberById should return member data for a valid member id 1`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": Any<String>,
  "email": "chris.whellams@gmail.com",
  "emailVerifiedAt": undefined,
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": true,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": true,
  "lang": "fi",
  "lastName": "Virtanen",
  "licenceExpiry": "2026-03-20",
  "licenceId": "FI.FCL.123456",
  "medicalExpiry": "2026-06-01",
  "memberId": "Matti1",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with additional flying rights",
      "isPublic": false,
      "name": {
        "en": "Flying Member",
        "fi": "Lento-oikeus",
        "sv": "Flygmedlem",
      },
      "permissions": [
        "flightlog.user",
        "booking.user",
        "aircraft.user",
        "access_codes.user",
        "document.user",
      ],
      "roleId": "FLYING_MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
        "sv": "Instruktör",
      },
      "permissions": [],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
        "sv": "Medlem",
      },
      "permissions": [
        "member",
        "document.user",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Safety Manager takes care of processing anonymized occurrences",
      "isPublic": false,
      "name": {
        "en": "Safety Manager",
        "fi": "Turvallisuusvastaava",
        "sv": "Säkerhetsansvarig",
      },
      "permissions": [
        "sms.manager",
      ],
      "roleId": "SMS_MANAGER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`Db query member tests getMemberRolesByMemberId should return roles for given valid member 1`] = `
[
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "MIK member with additional flying rights",
    "isPublic": false,
    "name": {
      "en": "Flying Member",
      "fi": "Lento-oikeus",
      "sv": "Flygmedlem",
    },
    "permissions": [
      "flightlog.user",
      "booking.user",
      "aircraft.user",
      "access_codes.user",
      "document.user",
    ],
    "roleId": "FLYING_MEMBER",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "Instructor with permissions to manage training",
    "isPublic": true,
    "name": {
      "en": "Instructor",
      "fi": "Lennonopettaja",
      "sv": "Instruktör",
    },
    "permissions": [],
    "roleId": "INSTRUCTOR",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "MIK member with basic access",
    "isPublic": true,
    "name": {
      "en": "Member",
      "fi": "Jäsen",
      "sv": "Medlem",
    },
    "permissions": [
      "member",
      "document.user",
    ],
    "roleId": "MEMBER",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "Safety Manager takes care of processing anonymized occurrences",
    "isPublic": false,
    "name": {
      "en": "Safety Manager",
      "fi": "Turvallisuusvastaava",
      "sv": "Säkerhetsansvarig",
    },
    "permissions": [
      "sms.manager",
    ],
    "roleId": "SMS_MANAGER",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
]
`;

exports[`Db query member tests getMembers should return everything for admins 1`] = `
{
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "description": "Administrator with full access",
  "isPublic": false,
  "name": {
    "en": "Administrator",
    "fi": "Ylläpitäjä",
    "sv": "Administratör",
  },
  "permissions": [
    "member.admin",
    "flightlog.admin",
    "booking.admin",
    "aircraft.admin",
    "access_codes.admin",
    "invoicing.admin",
    "document.admin",
  ],
  "roleId": "ADMIN",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db query member tests getMembers should return only approved members for valid members 1`] = `
[
  {
    "email": "pekka.hamalainen@example.com",
    "first": "Pekka",
    "lang": "fi",
    "last": "Hämäläinen",
    "memberId": "Pekka1",
    "phoneNumber": "0445678901",
    "roles": [
      "MEMBER",
    ],
  },
  {
    "email": "antti.heikkinen@example.com",
    "first": "Antti",
    "lang": "fi",
    "last": "Heikkinen",
    "memberId": "Antti1",
    "phoneNumber": "0467890123",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
  },
  {
    "email": "juho.kolehmainen@iki.fi",
    "first": "Liisa",
    "lang": "fi",
    "last": "Korhonen",
    "memberId": "Liisa1",
    "phoneNumber": "0412345678",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "email": "sanna.koskinen@example.com",
    "first": "Sanna",
    "lang": "fi",
    "last": "Koskinen",
    "memberId": "Sanna1",
    "phoneNumber": "0478901234",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "email": "examinerfe@mik.com",
    "first": "Exe",
    "lang": "fi",
    "last": "McExaminerface",
    "memberId": "Examiner1",
    "phoneNumber": "3584400012345",
    "roles": [
      "EXAMINER",
    ],
  },
  {
    "email": "jukka.nieminen@example.com",
    "first": "Jukka",
    "lang": "fi",
    "last": "Nieminen",
    "memberId": "Jukka1",
    "phoneNumber": "0423456789",
    "roles": [
      "INSTRUCTOR",
    ],
  },
  {
    "email": "chris.whellams@gmail.com",
    "first": "Matti",
    "lang": "fi",
    "last": "Virtanen",
    "memberId": "Matti1",
    "phoneNumber": "0401234567",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
  },
]
`;

exports[`Db query member tests getMembers should return unapproved members for admins 1`] = `
[
  {
    "email": "kaisa.laine@example.com",
    "first": "Kaisa",
    "lang": "fi",
    "last": "Laine",
    "memberId": "Kaisa1",
    "phoneNumber": "0456789012",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "email": "anna.makinen@example.com",
    "first": "Anna",
    "lang": "fi",
    "last": "Mäkinen",
    "memberId": "Anna1",
    "phoneNumber": "0434567890",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "email": "niko.ikonen@mik.fi",
    "first": "John",
    "lang": "fi",
    "last": "McDoe",
    "memberId": "John1",
    "phoneNumber": "0401234567",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "email": "nurmikko@gmail.com",
    "first": "Marja",
    "lang": "fi",
    "last": "Salminen",
    "memberId": "Marja1",
    "phoneNumber": "0490123456",
    "roles": [],
  },
  {
    "email": "juha.seppala@example.com",
    "first": "Juha",
    "lang": "fi",
    "last": "Seppälä",
    "memberId": "Juha1",
    "phoneNumber": "0489012345",
    "roles": [
      "MEMBER",
    ],
  },
]
`;
